--- a/src/templates/_fields/palette/settings.twig
+++ b/src/templates/_fields/palette/settings.twig
@@ -3,8 +3,8 @@
 {% if not field.fieldTemplateMode %}
 
     {{ forms.selectField({
-        label: "Field Template"|t('palette'),
-        instructions: "Use a field template to define this fields settings."|t('palette'),
+        label: "Field Template"|t('colorit'),
+        instructions: "Use a field template to define this fields settings."|t('colorit'),
         id: 'fieldTemplateId',
         name: 'fieldTemplateId',
         options: fieldTemplateOptions,
@@ -38,7 +38,7 @@
 
     {{ forms.editableTableField({
         label: 'Palette Colours',
-        instructions : 'Set the palette colours, these can be changed at any time.'|t('palette'),
+        instructions : 'Set the palette colours, these can be changed at any time.'|t('colorit'),
         id: 'paletteColours',
         rows: 4,
         textual: false,
@@ -69,8 +69,8 @@
     #}
 
     {{ forms.checkboxSelectField({
-        label: "Base Colours"|t('palette'),
-        instructions: "Select any base colours that you would like to include in your palette field."|t('palette'),
+        label: "Base Colours"|t('colorit'),
+        instructions: "Select the base colours that you would like to include."|t('colorit'),
         id: 'paletteBaseColours',
         name: 'paletteBaseColours',
         options: craft.palette.colours.baseColoursAsOptions,
@@ -79,8 +79,8 @@
     })}}
 
     {{ forms.lightswitchField({
-        label: "Opacity"|t('palette'),
-        instructions: "Allow the user to set opacty on this palette field."|t('palette'),
+        label: "Opacity"|t('colorit'),
+        instructions: "Allow the user to set opacty."|t('colorit'),
         id: 'allowOpacity',
         name: 'allowOpacity',
         on: field.allowOpacity,
@@ -88,8 +88,8 @@
     }) }}
 
     {{ forms.lightswitchField({
-        label: "Custom Colour"|t('palette'),
-        instructions: "Allow the user to set a custom colour hex for this palette field."|t('palette'),
+        label: "Custom Colour"|t('colorit'),
+        instructions: "Allow the user to set a custom colour hex."|t('colorit'),
         id: 'allowCustomColour',
         name: 'allowCustomColour',
         on: field.allowCustomColour,
@@ -97,8 +97,8 @@
     }) }}
 
     {{ forms.selectField({
-        label: "Colour Output"|t('palette'),
-        instructions: "Select the default colour output you would like to return."|t('palette'),
+        label: "Colour Output"|t('colorit'),
+        instructions: "Select the default colour output you would like to return."|t('colorit'),
         id: 'colourFormat',
         name: 'colourFormat',
         options: {
