--- a/src/templates/settings/general/index.twig
+++ b/src/templates/settings/general/index.twig
@@ -1,40 +1,38 @@
-{% extends "palette/_layouts/main" %}
+{% extends "colorit/_layouts/main" %}
 {% import "_includes/forms" as forms %}
 
 {% block content %}
 
-    {# <h2>{{ "General Settings"|t('palette') }}</h2> #}
-
  	<form action="" method="post" accept-charset="UTF-8">
 
         <input type="hidden" name="action" value="plugins/save-plugin-settings">
-		<input type="hidden" name="pluginHandle" value="palette">
-        {{ redirectInput('palette/settings/general') }}
+		<input type="hidden" name="pluginHandle" value="colorit">
+        {{ redirectInput('colorit/settings/general') }}
         {{ csrfInput() }}
 
         {% namespace 'settings' %}
 
 	        {{ forms.textField({
-	            label: 'Plugin Name'|t('palette'),
-	            instructions: 'Override the plugin name for this install'|t('palette'),
+	            label: 'Plugin Name'|t('colorit'),
+	            instructions: 'Override the plugin name for this install'|t('colorit'),
 	            id: 'pluginNameOverride',
 	            name: 'pluginNameOverride',
-	            placeholder: 'Palette'|t('palette'),
+	            placeholder: 'Colorit'|t('colorit'),
 	            value: settings.pluginNameOverride,
 	            errors: settings.getErrors('pluginNameOverride'),
 	            first: true
 	        }) }}
 
 	     	{{ forms.lightswitchField({
-	            label: 'Show in CP Nav'|t('palette'),
-	            instructions: 'Display a link to this plugin in the main cp navigation'|t('palette'),
+	            label: 'Show in CP Nav'|t('colorit'),
+	            instructions: 'Display a link to this plugin in the main cp navigation'|t('colorit'),
 	            id: 'hasCpSectionOverride',
 	            name: 'hasCpSectionOverride',
 	            on: settings.hasCpSectionOverride,
 	            errors: settings.getErrors('hasCpSectionOverride'),
 	        }) }}
 
-	        <input type="submit" class="btn submit" value="{{ 'Save'|t('palette') }}">
+	        <input type="submit" class="btn submit" value="{{ 'Save'|t('colorit') }}">
 
 		{% endnamespace %}
 
