--- a/src/templates/_fields/colorit/settings.twig
+++ b/src/templates/_fields/colorit/settings.twig
@@ -73,7 +73,7 @@
         instructions: "Select the base colours that you would like to include."|t('colorit'),
         id: 'paletteBaseColours',
         name: 'paletteBaseColours',
-        options: craft.palette.colours.baseColoursAsOptions,
+        options: craft.colorit.colours.baseColoursAsOptions,
         values: field.paletteBaseColours,
         errors: field.getErrors('paletteBaseColours')
     })}}
