--- a/src/templates/settings/fieldtemplates/_edit.twig
+++ b/src/templates/settings/fieldtemplates/_edit.twig
@@ -48,7 +48,7 @@
 
                     {% namespace 'types['~type~']' %}
 
-                        {% set _fieldTemplate = isCurrent ? fieldTemplate : craft.palette.fieldTemplates.createFieldTemplate(type) %}
+                        {% set _fieldTemplate = isCurrent ? fieldTemplate : craft.colorit.fieldTemplates.createFieldTemplate(type) %}
                         {{ _fieldTemplate.getFieldSettingsHtml()|raw }}
 
                     {% endnamespace %}
@@ -67,7 +67,9 @@
 
         {% endif %}
 
-        <input type="submit" class="btn submit" value="{{ 'Save'|t('colorit') }}">
+        <div class="buttons">
+            <input type="submit" class="btn submit" value="{{ 'Save'|t('colorit') }}">
+        </div>
 
     </form>
 
