--- a/src/templates/about.twig
+++ b/src/templates/about.twig
@@ -12,13 +12,10 @@
         name: craft.colorit.name
     }) }}</h2>
 
-    <p>Bit of useful info on palette, key features, what it does etc etc</p>
-
-    <p>Some links to the docs and changelog:</p>
-    <a class="btn" href="{{ craft.colorit.documentationUrl }}" target="_blank">{{ "Documentation" | t('colorit') }}</a>
+    <a class="btn btn-docs" href="{{ craft.colorit.documentationUrl }}" target="_blank">{{ "Documentation" | t('colorit') }}</a>
     <a class="btn" href="{{ craft.colorit.changelogUrl }}" target="_blank">{{ "Changelog" | t('colorit') }}</a>
 
-    <p>Please report any issues through github:</p>
+    <p>Please report any issues through Github:</p>
     <a class="btn" href="{{ craft.colorit.GitHubUrl('/issues') }}" target="_blank">{{ "Report an issue" | t('colorit') }}</a>
     <hr>
 
