--- a/src/templates/_layouts/main.twig
+++ b/src/templates/_layouts/main.twig
@@ -6,7 +6,7 @@
     'about': { title: "About"|t('colorit') },
     'settings': { heading: "Settings"|t('colorit') },
     'settings/general': { title: "General"|t('colorit') },
-    'settings/fieldtemplates': { title: "Field Templates"|t('colorit') },
+    'settings/fieldtemplates': { title: "Presets"|t('colorit') },
 } %}
 
 {% set selectedItemHandle = selectedItem ?? craft.app.request.getSegment(2)~(craft.app.request.getSegment(3) ? '/'~craft.app.request.getSegment(3)) %}
