--- a/src/templates/settings/general/index.twig
+++ b/src/templates/settings/general/index.twig
@@ -25,7 +25,7 @@
 
 	     	{{ forms.lightswitchField({
 	            label: 'Show in CP Nav'|t('colorit'),
-	            instructions: 'Display a link to this plugin in the main cp navigation'|t('colorit'),
+	            instructions: 'Display a link to this plugin in the main navigation'|t('colorit'),
 	            id: 'hasCpSectionOverride',
 	            name: 'hasCpSectionOverride',
 	            on: settings.hasCpSectionOverride,
